# goes19-sat-processor

./: .gitignore  README.md  pyproject.toml  requirements_2026-02-12_21-43.txt  requirements_20260213_2101.txt  requirements_20260213_2109.txt
notebooks/: LST.ipynb  LST_02.ipynb  LST_Global_3600x1800.tif  LST_WGS84_Coloreado.tif  LST_WGS84_Coloreado.tif.aux.xml
src/goes19_processor/: main.py
src/goes19_processor/download/: aws_noaa.py
src/goes_processor/: config_satpy.py  main.py  scheduler.py
src/goes_processor/download/: download.py  download_cli.py
src/goes_processor/processing/: bulk_cli.py  processing_cli.py
src/goes_processor/processing/logic_crawler/: crawler.py
src/goes_processor/processing/logic_how/: lst.py  truecolor.py
src/goes_processor/satpy_configs/composites/: abi.yaml
src/goes_processor/satpy_configs/enhancements/: abi.yaml
z_scripts_01_download/: descargar_LSTF_one_day.sh  descargar_LSTF_one_file.sh  descargar_MCMIPF_one_day.sh  descargar_MCMIPF_one_file.sh  descargar_MCMIPF_one_hour.sh
z_scripts_02_proc/: proc_lst_one_file.sh  proc_mcmipt_one_file.sh
