[project]
name = "goes19_processor"
version = "0.1.0"
description = "Procesador de imágenes del satélite GOES-19 usando Satpy"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Tu Nombre", email = "tu.email@ejemplo.com"},
]
keywords = ["goes-19", "satpy", "satelite", "procesamiento-imagenes", "meteorologia"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]

dependencies = [
    "boto3>=1.34.0",
    "botocore>=1.34.0",
    "click>=8.1.0",
    "pyyaml>=6.0.0",
    "tqdm>=4.66.0",
    "fsspec>=2024.0.0",
    "s3fs>=2024.0.0",
    "apscheduler>=3.10.0",
    # Descomenta cuando estés listo para instalar Satpy y libs geo
    # "satpy>=0.50.0",
    # "rasterio>=1.3.0",
    # "geopandas>=0.14.0",
    # "rasterstats>=0.19.0",
    # "cartopy>=0.23.0",

]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.0",
    "black>=24.0.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
goes19 = "goes19_processor.main:cli"

[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/goes19_processor"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/config",
    "/README.md",
    "/pyproject.toml",
]

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "W", "I", "PL", "UP", "B", "C4"]
ignore = ["E501"]  # line too long (Black lo maneja)

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"